# Animals_Healthcare_Application

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  conftest.py  justfile  manage.py  pyproject.toml  requirements.txt
AHC_app/: .dockerignore  .env.template.txt  .pre-commit-config.yaml  Dockerfile  Dockerfile-couchdb  Dockerfile-queue  Dockerfile-web  Pipfile  docker-compose.yml  justfile  manage.py  pyproject.toml  requirements.txt  setup_couchdb.sh
AHC_app/AHC_app/: asgi.py  settings.py  urls.py  wsgi.py
AHC_app/AHC_app/celery_notifications/: config.py  cron.py
AHC_app/AHC_app/celery_notifications/utils/: discord_utils.py  example_task.py  sending_utils.py
AHC_app/animals/: forms.py  models.py  signals.py  urls.py  views.py
AHC_app/animals/migrations/: 0001_initial.py  0002_alter_animal_birthdate_and_more.py  0003_alter_animal_first_contact_medical_place_and_more.py  0004_delete_medicalrecord.py  0005_remove_biometricrecord_animal_and_more.py
AHC_app/animals/mixins/: animal_owner_permissions.py
AHC_app/animals/owner_utils/: forms.py  views.py
AHC_app/animals/templates/: profile.html
AHC_app/animals/templates/animals/: all_animals_stable.html  animal_confirm_delete.html  change_birthday.html  change_first_contact.html  change_owner.html  create.html  image.html  manage_keepers.html  profile.html
AHC_app/animals/templatetags/: custom_timesince.py
AHC_app/animals/utils_owner/: forms.py  views.py
AHC_app/homepage/: admin.py  models.py  urls.py  utils.py  views.py
AHC_app/homepage/management/: __init__.py
AHC_app/homepage/management/commands/: sync_cronjobs.py
AHC_app/homepage/migrations/: 0001_initial.py  0002_alter_profilebackground_content.py  0003_alter_profilebackground_content.py  0003_cronjob.py  0004_alter_profilebackground_content.py  0005_alter_profilebackground_content.py  0006_rename_privelage_to_delete_animal_privilege_privilege_to_delete_animal_and_more.py  0007_alter_profilebackground_content.py  0008_alter_profilebackground_content.py  0009_alter_profilebackground_content.py  0010_alter_profilebackground_content.py  0011_alter_profilebackground_content.py  0012_alter_profilebackground_content.py  0013_alter_profilebackground_content.py  0014_alter_profilebackground_content.py  0015_alter_profilebackground_content.py  0016_alter_profilebackground_content.py  0017_alter_profilebackground_content.py  0018_alter_profilebackground_content.py  0019_alter_profilebackground_content.py  0020_alter_profilebackground_content.py  0021_alter_profilebackground_content.py  0022_alter_profilebackground_content.py  0023_alter_profilebackground_content.py  0024_alter_profilebackground_content.py  0025_alter_profilebackground_content.py  0026_alter_profilebackground_content.py  0027_alter_profilebackground_content.py  0028_alter_profilebackground_content.py  0029_alter_profilebackground_content.py  0030_alter_profilebackground_content.py  0031_alter_profilebackground_content.py  0032_alter_profilebackground_content.py  0033_alter_profilebackground_content.py  0034_alter_profilebackground_content.py  0035_alter_profilebackground_content.py
AHC_app/homepage/templates/homepage/: base.html  homepage.html
AHC_app/homepage/tests/: test_homepage.py
AHC_app/homepage/tests/models/: test_animal_title.py
AHC_app/medical_notes/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
AHC_app/medical_notes/forms/: type_basic_note.py  type_feeding_notes.py  type_measurement_notes.py
AHC_app/medical_notes/migrations/: 0001_initial.py  0002_currentmedicine_currentdiet_biometricrecord_and_more.py  0002_remove_currentmedicine_animal_delete_currentdiet_and_more.py  0003_feedingnote_smsnotification_emailnotification_and_more.py  0003_medicalrecord_note_tags.py  0004_alter_discordnotification_timezone_and_more.py  0004_genericstringtaggeditem_and_more.py  0005_alter_genericstringtaggeditem_object_id.py  0005_medicalrecordattachment.py  0006_uuidtaggeditem_delete_genericstringtaggeditem_and_more.py  0007_alter_uuidtaggeditem_options.py  0008_alter_medicalrecord_note_tags.py  0009_discordnotification_last_modification_and_more.py  0009_medicalrecord_author.py  0010_alter_discordnotification_last_modification_and_more.py  0010_medicalrecord_additional_animals.py  0011_alter_medicalrecord_additional_animals.py  0011_medicalrecordattachment_description.py  0012_alter_medicalrecord_additional_animals.py  0012_medicalrecordattachment_file_name_and_more.py  0013_biometricheightrecords_biometricweightrecords_and_more.py  0013_remove_medicalrecordattachment_url_and_more.py  0014_alter_biometriccustomrecords_id_and_more.py  0014_alter_discordnotification_last_modification_and_more.py  0015_alter_biometriccustomrecords_id_and_more.py
AHC_app/medical_notes/models/: type_basic_note.py  type_feeding_notes.py  type_measurement_notes.py
AHC_app/medical_notes/signals/: type_feeding_notes.py  type_measurement_notes.py
AHC_app/medical_notes/templates/medical_notes/: create.html  create_notify.html  delete_confirm.html  edit.html  feeding_notes_list.html  full_timeline_of_notes.html  notification_list.html
AHC_app/medical_notes/templatetags/: custom_file_name.py
AHC_app/medical_notes/type_feeding_notes/: models.py
AHC_app/medical_notes/type_measurement_notes/: forms.py  models.py  signals.py  views.py
AHC_app/medical_notes/views/: type_basic_note.py  type_feeding_notes.py  type_measurement_notes.py
AHC_app/static/: custom_pico.scss
AHC_app/static/CACHE/css/: custom_pico.14c2e2c3cac6.css  (+1 more)
AHC_app/static/css/: expanding_sections.css  stable_grid.css  timeline.css
AHC_app/static/js/: hiding_note_fields_in_form.js
AHC_app/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
AHC_app/users/migrations/: 0001_initial.py  0002_alter_profile_profile_background.py  0002_profile_allow_recennt_animals_list.py  0003_alter_profile_birthdate.py  0003_profile_pinned_animals.py  0004_alter_profile_birthdate.py  0005_alter_profile_profile_background.py  0006_alter_profile_profile_image.py
(+311 files in other folders)
