[project]
name = "animals-healthcare-application"
version = "0.1.0"
description = "Animals Healthcare Application — pet health data management"
requires-python = ">=3.14"

dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.14",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "flower",
    "discord",
    "python-decouple",
    "pillow>=11.0",
    "cryptography>=43",
    "cffi>=1.17",
    "django-taggit",
    "django-timezone-field>=6.1",
    "tzdata",
    "python3-openid",
    "requests",
    "requests-oauthlib",
    "python-dateutil",
    "pyjwt",
    "defusedxml",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "ty>=0.0.20",
    "codespell>=2.4.1",
    "bandit[toml]",
    "pytest>=9.0.2",
    "pytest-django",
    "pytest-cov>=6.1.1",
    "icecream",
    "commitizen>=4.13.9",
    "django-stubs>=5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "DJ"]
ignore = [
    "DJ001",
    "DJ008",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 124

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ahc.settings"
pythonpath = ["src"]
python_files = ["test_*.py", "tests.py"]
addopts = "--strict-markers"
markers = [
    "unit: fast isolated tests with no DB access",
    "integration: tests that use the DB or external services",
    "slow: tests that take more than a few seconds",
]

[tool.ty.environment]
python-version = "3.14"
extra-paths = ["src"]

[tool.ty.src]
exclude = ["src/ahc/apps/*/migrations/*"]

[tool.codespell]
skip = "uv.lock,./static,./static_collected"
builtin = "clear"
quiet-level = 3

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101", "B404", "B603", "B607"]

[tool.coverage.run]
data_file = "tests/result/.coverage"

[[tool.ty.overrides]]
include = [
    "src/ahc/apps/*/signals.py",
    "src/ahc/apps/*/signals/**",
    "src/ahc/apps/*/forms.py",
    "src/ahc/apps/*/forms/**",
    "src/ahc/apps/*/mixins/**",
    "src/ahc/apps/*/*/mixins/**",
    "src/ahc/apps/homepage/views.py",
]
rules = { unresolved-attribute = "ignore" }

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
